# AAI_pipeline

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose-local.yml  docker-compose.yml  main.py  portal.json  pyproject.toml
debug/: json_analysis.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AssignDialog.tsx  IngestHistory.tsx  KanbanBoard.tsx  OpportunityCard.tsx  TeamPanel.tsx
frontend/src/types/: index.ts
src/aai_pipeline/: database.py  ingest.py  models.py
src/aai_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aai_pipeline/api/: app.py  mcp.py
src/aai_pipeline/api/routes/: comments.py  ingest.py  opportunities.py  team.py
